--- a/styles.css
+++ b/styles.css
@@ -278,12 +278,11 @@ section.ws {
   right: 0;
   bottom: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;  
-  align-items: flex-start;    
-  text-align: left;
-  color: #000000;  
-  padding: 10px;
+  flex-direction: row;
+  align-items: flex-end;
+  color: #000000;
+  padding: 20px;
+  gap: 10px;
 }
 
 .containerProj2 {
